<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/tvPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="16dp"
        android:text="@string/altura"
        app:layout_constraintTop_toBottomOf="@id/tvPeso"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/tvAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeso"/>

    <TextView
        android:id="@+id/tvImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAltura"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/zeros"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/tvImc"
        app:layout_constraintTop_toBottomOf="@id/etAltura"/>

    <TextView
        android:id="@+id/tvClassificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultado"
        tools:text="Peso Normal" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintStart_toEndOf="@id/tvImc"
        app:layout_constraintTop_toBottomOf="@id/tvClassificacao" />

    <Space
        android:id="@+id/espacoBotoes"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btCalcular"
        app:layout_constraintTop_toBottomOf="@id/tvClassificacao" />

    <Button
        android:id="@+id/btLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        app:layout_constraintStart_toEndOf="@id/espacoBotoes"
        app:layout_constraintTop_toBottomOf="@id/tvClassificacao" />

</androidx.constraintlayout.widget.ConstraintLayout>